# aitk

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: check.yml  ci.yml  page.yml
book/: book.toml
book/src/: SUMMARY.md  advanced.md  crate-docs.md  getting-started.md  welcome.md
book/src/advanced/: custom-client.md
book/src/basics/: introduction.md  quickstart.md
book/src/chat-app/: advanced.md  simple.md
book/src/clients/: openai-image.md  openai-stt.md  openai.md  realtime.md  router.md
examples/basic-chat/: Cargo.toml  README.md
examples/basic-chat/src/: main.rs
examples/cli/: Cargo.toml
examples/cli/src/: main.rs
examples/egui/: Cargo.toml
examples/egui/src/: main.rs
examples/gemini-tool-calls/: Cargo.toml  README.md
examples/gemini-tool-calls/src/: main.rs
examples/hello-world/: Cargo.toml  README.md
examples/hello-world/src/: main.rs
examples/image-generation/: Cargo.toml  README.md
examples/image-generation/src/: main.rs
examples/openai-standardized/: Cargo.toml  README.md
examples/openai-standardized/src/: main.rs
examples/tool-calls/: Cargo.toml  README.md
examples/tool-calls/src/: main.rs
src/: clients.rs  lib.rs  prelude.rs  utils.rs
src/clients/: gemini.rs  map.rs  openai.rs  openai_image.rs  openai_realtime.rs  openai_stt.rs  router.rs  tester.rs
src/controllers/: chat.rs
src/mcp/: mcp_manager.rs
src/protocol/: attachment.rs  client.rs  entity.rs  message.rs  tool.rs
src/utils/: asynchronous.rs  errors.rs  http.rs  openai.rs  sse.rs  thread.rs  tool.rs
