[package]
name = "aitk"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = [
  "json",
  "stream",
  "rustls-tls",
  "multipart",
], default-features = false, optional = true }

futures = "0.3.31"
url = "2.5.8"
async-stream = "0.3.6"
cfg-if = "1.0.0"
log = "0.4"
chrono = { version = "0.4.41", features = ["serde"] }
mime_guess = "2.0.5"
unicode-segmentation = "1.12.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.149" }
base64 = { version = "0.22.1" }

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux", target_arch = "wasm32"))'.dependencies]
# 0.17.1 accidentally bumped its minimum Rust version https://github.com/PolyMeilex/rfd/issues/302
# causing issues in Ubuntu. So let's keep using 0.15.3 until the patch is published.
rfd = { version = "0.15.3", features = ["ashpd", "urlencoding", "xdg-portal"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "fs", "time"], optional = true }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"], optional = true }
rmcp = { git = "https://www.github.com/modelcontextprotocol/rust-sdk", rev = "9349f5cb", features = ["transport-sse-client", "transport-sse-client-reqwest", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "transport-child-process", "client"], optional = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
# `wasm-bindgen-futures` is actually very lightweight, but keeping this optional
# is consistent with the native behavior.
wasm-bindgen-futures = { version = "0.4.50", optional = true }
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = [
  "Document",
  "Element",
  "HtmlElement",
  "HtmlAnchorElement",
  "Window",
  "Blob",
] }

[features]
default = []
# default = ["full"]
http = ["dep:reqwest"]
async-rt = ["dep:tokio", "dep:wasm-bindgen-futures"]
mcp = ["async-rt", "http", "dep:rmcp"]
api-clients = ["http"]
realtime-clients = ["async-rt", "dep:tokio-tungstenite"]
full = ["default", "async-rt", "http", "api-clients", "mcp", "realtime-clients"]
